- Added links to connector - fixed spacing

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -326,6 +326,10 @@ div.alert-notice{
 @media (min-width: 768px) {
   .navbar-toggle1 {
     display: none; } }
+.sidenavbar {
+  background-color: transparent;
+  border-color: transparent;
+}
 
 /* end navbar */
 
